@@ -1,0 +1,4 @@
+# There is no module docstring, but we should not analyse this file
+# Because it starts like an emacs file lock
+# https://www.gnu.org/software/emacs/manual/html_node/elisp/File-Locks.html
+# See #367
